--- a/OnClickCleaner/Form1.resx
+++ b/OnClickCleaner/Form1.resx
@@ -123,4 +123,7 @@ Partition Number : How manny partition do you have in that Drive. such as C:/ D:
 
 Please Note :  Removed Partition Is permanent deleted . AT the Time .</value>
   </data>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
